workspaces/diff-engine/src/commands/snapshots/optic_diff_engine__commands__endpoint__test__can_handle_add_path_parameter__new_events.snap
---
source: workspaces/diff-engine/src/commands/endpoint.rs
expression: new_events
---
[
    PathParameterAdded(
        PathParameterAdded {
            path_id: "path_2",
            parent_path_id: "path_1",
            name: "todoId",
            event_context: None,
        },
    ),
]
