workspaces/diff-engine/src/commands/snapshots/optic_diff_engine__commands__endpoint__test__can_handle_add_path_parameter__unassignable_path_result.snap
---
source: workspaces/diff-engine/src/commands/endpoint.rs
expression: unassignable_path_result.unwrap_err()
---
Validation(
    "Command failed validation: path id must be assignable to add path parameter, \"AddPathParameter(AddPathParameter { path_id: \\\"path_1\\\", parent_path_id: \\\"path_1\\\", name: \\\"todoId\\\" })\"",
)
